<resources>
    <string name="app_name">SeeNatural</string>

    <string name="label_treble">Treble</string>
    <string name="label_bass">Bass</string>
    <string name="label_both">Both</string>

    <string name="select_clef">Select the clef(s) you\'d like to practice below.</string>
    <string name="select_difficulty">Select the difficulty below.</string>
    <string name="label_beginner">Beginner</string>
    <string name="label_intermediate">Intermediate</string>
    <string name="label_complete">Complete</string>

    <string name="treble">treble</string>
    <string name="bass">bass</string>
    <string name="both">both</string>

    <string name="char_treble_clef">𝄞</string>
    <string name="char_alto_clef">𝄡</string>
    <string name="char_bass_clef">𝄢</string>
    <string name="char_staff">𝄚</string>
    <string name="char_staff_bracket">𝄔</string>
    <string name="char_whole_note">𝅝</string>
    <string name="char_half_note">𝅗𝅥</string>
    <string name="char_quarter_note">𝅘𝅥</string>
    <string name="char_flat_symbol">♭</string>
    <string name="char_natural_symbol">♮</string>
    <string name="char_sharp_symbol">♯</string>
    <string name="title_activity_sight_reading_setup">SightReadingSetupActivity</string>

    <!-- Settings -->
    <string name="piano_settings_key">PianoSettings</string>
    <string name="piano_low_note_key">PianoLowNote</string>
    <string name="piano_high_note_key">PianoHighNote</string>



    <string name="staff_settings_key">StaffSettings</string>
    <string name="staff_low_note_key">StaffLowNote</string>
    <string name="staff_high_note_key">StaffHighNote</string>
    <string name="staff_hide_key_signature_key">StaffHideKeySignature</string>
    <string name="staff_hide_bass_clef_key">HideBassClef</string>
    <string name="staff_hide_bass_clef_lines_key">HideBassClefLines</string>
    <string name="staff_hide_treble_clef_key">HideTrebleClef</string>
    <string name="staff_hide_treble_clef_lines_key">HideTrebleClefLines</string>



    <string name="reading_settings_key">ReadingSettings</string>
    <string name="reading_single_octave_mode_key">SingleOctaveMode</string>
    <string name="reading_endless_mode_key">EndlessMode</string>
    <string name="reading_key_signature_key">ReadingKeySignature</string>
    <string name="reading_generate_accidentals_key">GenerateAccidentals</string>
    <string name="reading_generate_flats_key">GenerateFlats</string>
    <string name="reading_generate_naturals_key">GenerateNaturals</string>
    <string name="reading_generate_sharps_key">GenerateSharps</string>






    <!-- Example strings for fragments -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="piano_fragment_label">Piano Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <bool name="ReadingSingleOctaveModeDefault">true</bool>
    <string name="ReadingKeySignatureDefault">Cmaj / Amin</string>


    <string name="PianoLowNoteDefault">C4</string>
    <string name="PianoHighNoteDefault">C6</string>

    <string name="StaffLowNoteDefault">A0</string>
    <string name="StaffHighNoteDefault">C8</string>
    <string name="bottom_navigation_reading_title">Sight-read</string>
    <string name="bottom_navigation_play_title">Play</string>
    <string name="bottom_navigation_theory_title">Theory</string>
    <string name="bottom_navigation_settings_title">Settings</string>


</resources>
