<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.dunneev.seenatural.Utilities.NotePreference
        android:id="@+id/PianoLowPracticeNotePreference"
        android:defaultValue="@string/PianoLowNoteDefault"
        android:key="@string/piano_low_note_key"
        android:summary="%s"
        android:title="Low key"
        app:icon="@drawable/ic_low_48px" />

    <com.dunneev.seenatural.Utilities.NotePreference
        android:id="@+id/PianoHighPracticeNotePreference"
        android:defaultValue="@string/PianoHighNoteDefault"
        android:key="@string/piano_high_note_key"
        android:summary="%s"
        android:title="High key"
        app:icon="@drawable/ic_top_48px" />


<!--    todo: use range slider-->
</PreferenceScreen>